# cool-compiler

./: .gitignore  a.out  compile.sh  coolcompiler.cabal  design-notes.txt  flake.nix  readme.txt  test.fish
examples/: arith.1.input  arithmetic-right-nested.cl  attribute-referencing-itself.cl  concat-exponential.cl  cool-fizzbuzz-boring.cl  cool-fizzbuzz.cl  dispatch.cl  div_zero.cl  few-parameters.cl  foo.cl  good.cl  hello-world.cl  in-int-type-name.cl  in_out_string.cl  in_out_string.contains-null-character.input  inherited-main.cl  many-parameters.cl  method-named-self.cl  nested-loop.cl  new-builtin.cl  new_self_type.cl  print-cool.cl  recursion.cl  recursive-many-parameters.cl  rosetta-julia.cl  rosetta.cl  self-type.cl  stack_overflow.cl  static_dispatch_to_parent_impl.cl  str_ops.cl  using-attributes-in-attribute-initializers.cl  using-inherited-attributes.cl  void_dispatch.cl  while-loop-return.cl
examples-to-submit/: test1.cl  test4.cl
examples/basic/: abort.cl  case.cl  case2.cl  case_void.cl  comparison.cl  concat.cl  copy.cl  div_zero.cl  equal_to.cl  in_int_str.1.input  in_int_str.cl  in_out_int.cl  initial_value.cl  is_void_test.cl  less_than.cl  less_than_equal_to.cl  str_ops.cl  substr.1.input  substr.2.input  substr.3.input  substr.4.input  substr.6.input  substr.7.input  substr.8.input  (+5 more)
src/: Assembly.hs  Cfg.hs  ConstantFolding.hs  DeadCodeElimination.hs  InputIr.hs  InputIrParser.hs  Interpreter.hs  Main.hs  Ssa.hs  Tac.hs  Trac.hs  TracIr.hs  Twac.hs  TwacLs.hs  TwacR.hs  Util.hs  benchmark1.cl  benchmark2.cl  foo.cl  main.hs  readme.txt
(+21 files in other folders)
